fix(whomadeit): incorrect line spacing

--- a/src/components/top-section-whomadeit.less
+++ b/src/components/top-section-whomadeit.less
@@ -11,7 +11,9 @@ section#whomadeit {
   }
 
   .sub-headline {
+    font-size: 1.2rem;
     text-align: center;
+    margin-bottom: 1rem;
   }
 
   .content {
